[workspace]

[package]
name = "graph_project"
version = "0.0.1"
edition = "2021"

[dependencies]

[[bin]]
name = "graph_viewer"
path = "bin/main.rs"

[lib]
name = "graph_project"
path = "src/lib.rs"

[profile.dev]
opt-level = 0
debug = true
strip = false
lto = false
debug-assertions = true
codegen-units = 1
panic = "abort"
overflow-checks = true
incremental = true

[profile.release]
opt-level = "s"
debug = false
strip = true
lto = true
debug-assertions = false
codegen-units = 1
panic = "unwind"
overflow-checks = false
incremental = false